k8s/div-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: div-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: div-service
  template:
    metadata:
      labels:
        app: div-service
    spec:
      containers:
      - name: div-service
        image: div-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: div-service
spec:
  selector:
    app: div-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
