k8s/mul-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mul-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mul-service
  template:
    metadata:
      labels:
        app: mul-service
    spec:
      containers:
      - name: mul-service
        image: mul-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mul-service
spec:
  selector:
    app: mul-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
