k8s/sub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sub-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sub-service
  template:
    metadata:
      labels:
        app: sub-service
    spec:
      containers:
      - name: sub-service
        image: sub-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: sub-service
spec:
  selector:
    app: sub-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
